--- a/Projekt-Digital-Agentur-main/index.html
+++ b/Projekt-Digital-Agentur-main/index.html
@@ -5,29 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>super duper</title>
 </head>
+
 <body>
     <header>
         <h1>super <br> duper</h1>
-    <div>
-        <h2>Creative & Fresh</h2>
-        <p>We love to craft beautiful digital experiences across all platforms
-        </p>
-    </div>
-    <nav>
-        <a href="#">PROJECTS</a>
-        <a href="#">What we do</a>
-        <a href="#">Studio</a>
-        <a href="#">Contact</a>
-    </nav>
+        <div>
+             <h2>Creative & Fresh</h2>
+            <p>We love to craft beautiful digital experiences across all platforms</p>
+        </div>
+        <nav>
+            <a href="#">PROJECTS</a>
+            <a href="#">What we do</a>
+            <a href="#">Studio</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
     <main>
         <section>
             <img src="https://assets.website-files.com/5c8834f1555981170b2fd8b1/5c898cd67456ffcba141a5ff_PROJECTS.svg" alt="background">
-            <h3>
-                Stuff we did
-            </h3>
+            <h3>Stuff we did</h3>
             <p>Because our roots run deep in design and technology, we see every challenge for what it is. No pre-packaged solutions here. We are quick to concept, develop and prototype so the fine-tuning can begin ASAP. The end result is an all-you, all-custom design that captures attention and leaves an impression. You know, something awesome.
             </p>
             <p>Here's some stuff that we're proud to be part of:</p>
