--- a/13.04.2023 Animations_Transitions_Transform/transition/Transition_Lev2_1/index.html
+++ b/13.04.2023 Animations_Transitions_Transform/transition/Transition_Lev2_1/index.html
@@ -11,9 +11,7 @@
     <section class="box">
         <div class="container">
             <img src="https://images.unsplash.com/photo-1681156704579-a66b04f01570?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=930&q=80" alt="food">
-            <div class="overlay">
-                <div class="text">Discover</div>
-            </div>
+            <div class="overlay">Discover</div>
         </div>
     </section>
 </body>
