add string methods

--- a/28.04.2023 if_else/Lev2_2/index.html
+++ b/28.04.2023 if_else/Lev2_2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form>
-       <label for="slider"> AQI: <span></span></label>
+       <label for="slider"> AQI:</label>
        <input
         type="range"
         id="slider"
