--- a/27.04.2023 Value-input_ClassList/ClassList/Lev3_3/index.html
+++ b/27.04.2023 Value-input_ClassList/ClassList/Lev3_3/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form onsubmit="return false">
-        <label for="green">red</label>
+        <label for="red">red</label>
         <input 
         type="range" 
         id="red" 
